# boundary-signature

./: .gitignore  .importlinter  .zenodo.json  CITATION.cff  LICENSE  README.md  pyproject.toml
docs/: adapters.md  architecture.md
docs/decisions/: ADR-0002-medqa-embedding-bin-precision.md  ADR-0003-medqa-4-option-variant.md  ADR-0004-base-model-evaluation-deferred.md  ADR-0005-llm-adapter-generate-method.md  ADR-0006-gate-metric-revised-corrected-composite.md  ADR-0007-hypothesis-distribution-parser-tolerance.md  ADR-0008-measurement-protocol-token-probabilities.md  ADR-0009-schema-v4-uncertainty-extension.md  convergence_pattern_observation.md  corruption_registry.md  perturbation_uq_literature.md  prereg_2d_interaction_probe.md  prereg_confident_disagree_triage_flag.md  prereg_cross_quant_comparator.md  prereg_richdist_features.md  prereg_semantic_entropy_comparator.md  resumable_campaign_property.md  stage_2_retrospective.md  stage_3_2_pre_design_notes.md  stage_3_retrospective_notes.md  stage_4a_pre_run_analysis_plan.md  stage_4b_mmlu_cross_benchmark_pre_design_notes.md
docs/exploration/: 2026-05-03-internal-disagreement-as-headline-claim.md  2026-05-03-stage-4a-followup-design.md  2026-05-03-stage-4a-pilot-n100.md  2026-05-04-llama-cpp-investigation-and-mass-capture.md  2026-05-04-stage-4a-pilot-n100-llamacpp.md  2026-05-05-stage-4a-replication-n1273.md  2026-05-06-stage-4b-mmlu-professional_law.md  2026-05-07-cross-adapter-agreement-partial.md  2026-05-07-stage-4b-graph-structure-confirmation.md  2026-05-26-medqa-cross-quant-comparator.md  2026-05-26-medqa-semantic-entropy-comparator.md  condition_c_dress_rehearsal_2026-05-03.md  condition_c_end_to_end_2026-05-03.md  qwen25_failure_case_2026-05-03.md
docs/paper/: draft.md
experiments/medqa_generalization/: README.md
experiments/medqa_generalization/scripts/: 00_explore_data.py  run_stage4b_smoke.sh  (+17 more)
measurements/medqa-2d-interaction-probe/: summary.json
measurements/medqa-belief-dynamics-probe/: summary.json
measurements/medqa-condition-b-probe/: summary.json
measurements/medqa-confident-disagree-flag/: summary.json
measurements/medqa-cross-quant/: cache.jsonl
measurements/medqa-cross-quant-llama/: cache.jsonl
measurements/medqa-realtime-perturbation-probe/: summary.json
measurements/medqa-richdist-capture/: analysis_done.txt  per_question.jsonl  smoke.jsonl
scripts/: bench_mlx_stage6_shape.py  validate_phase_c_rope.py
src/bsig/: __init__.py
tests/: test_architecture.py
tests/core/: test_calibration.py  test_evaluation.py  test_graph.py  test_paths.py  test_persistence.py  test_recovery.py  test_signature.py  test_trajectory.py
tests/integration/: test_mlx_llamacpp_agreement.py
tests/medqa/: conftest.py  test_action_canonicalizer.py  test_canonicalization.py  test_condition_c.py  test_condition_c_round_trip.py  test_conditions_a_b.py  test_decomposer.py  test_ground_truth.py  test_loader.py  test_medqa_evaluation.py  test_mmlu_loader.py  test_persistence_prompt_versions.py  test_prompts.py  test_serialization.py
tests/reference/: test_embedding_st.py  test_llm_llama_cpp.py  test_llm_local.py  test_llm_mlx.py
(+55 files in other folders)
